--- a/services/user/package.json
+++ b/services/user/package.json
@@ -16,11 +16,17 @@
   "dependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
+    "cloudinary": "^2.7.0",
     "concurrently": "^9.2.0",
+    "datauri": "^4.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "typescript": "^5.9.2"
   }
