--- a/services/blog/package.json
+++ b/services/blog/package.json
@@ -15,15 +15,21 @@
   "license": "ISC",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@types/amqplib": "^0.10.7",
     "@types/axios": "^0.9.36",
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "amqplib": "^0.10.8",
     "axios": "^1.11.0",
     "concurrently": "^9.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.10",
+    "redis": "^5.8.2",
     "typescript": "^5.9.2"
   }
 }
