--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.15.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-oauth/google": "^0.12.2",
     "@types/axios": "^0.9.36",
     "@types/js-cookie": "^3.0.6",
@@ -18,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "http": "^0.0.1-security",
+    "jodit-react": "^5.2.19",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
