--- a/services/author/package.json
+++ b/services/author/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.15.0",
+    "@google/generative-ai": "^0.24.1",
     "@neondatabase/serverless": "^1.0.1",
     "@types/amqplib": "^0.10.7",
     "@types/cors": "^2.8.19",
