--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,13 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
+    "cls": "^0.1.5",
     "clsx": "^2.1.1",
     "http": "^0.0.1-security",
     "jodit-react": "^5.2.19",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.541.0",
+    "moment": "^2.30.1",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
